[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/battery.png" type="Texture" id=1]
[ext_resource path="res://objects/inanimate/Battery.gd" type="Script" id=2]
[ext_resource path="res://assets/Pickup_Coin20.wav" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5.99817, 7.01493 )

[node name="Battery" type="Area2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1 )
shape = SubResource( 1 )

[node name="ControlTip" type="Label" parent="."]
visible = false
margin_left = -151.498
margin_top = -41.1101
margin_right = 151.502
margin_bottom = -10.1101
text = "Battery
Z: Pick Up"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SoundEffect2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="body_entered" from="." to="." method="_on_Battery_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Battery_body_exited"]
[connection signal="finished" from="SoundEffect2D" to="." method="_on_SoundEffect2D_finished"]
